# PortfolioBuilder

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dashboard.py  dockerfile  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: build-push.yml  build.yml  dependabot.yml  deploy.yml  pre-commit.yml  test.yml
.streamlit/: config.toml
app/: __init__.py  config.py  data_loader.py  expected_returns.py  loader.py  main.py  middleware.py  models.py  optimisation.py  portfolio_metrics.py  risk_models.py  schemas.py
app/api/: api_router.py  main.py
app/api/routes/: backtest.py  expected_returns.py  funds.py  health.py  optimisation.py  risk_models.py  securities.py  utils.py
app/core/: config.py
app/portfolio_analysis/: backtest.py  expected_returns.py  metrics.py  optimisation.py  risk_models.py
aurora/backend/: app.yaml  dockerfile  requirements.txt
aurora/backend/app/api/: api.py
aurora/backend/app/api/endpoints/: backtest.py  factor.py  factorRegression.py  factor_analysis.py  frontier.py  funds.py  optimisation.py
aurora/backend/app/data/: sp500.csv
aurora/backend/app/modules/: backtestCalculator.py  data_loader.py  factor.py  factor_analysis.py  metrics.py  optimisation.py  portfolio.py
aurora/backend/app/schemas/: __init__.py
aurora/frontend/: dockerfile  requirements.txt
aurora/frontend/.streamlit/: config.toml
aurora/frontend/app/: main.py
aurora/frontend/app/.streamlit/: config.toml
aurora/frontend/app/modules/: backtest.py  config.py  data_loader.py  factor.py  funds.py  optimisation.py
aurora/frontend/app/pages/: backtest.py
dashboard/: backtest.py  optimisation.py  screener.py
data/: security_details.pq  security_returns.pq
data/processed/: details.pq  fund_details.json  fund_details.pq  fund_returns.pq
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  siteConfig.ts
frontend/src/app/screener/: layout.tsx  page.tsx
frontend/src/components/: Card.tsx  Divider.tsx  LineChart.tsx  SelectNative.tsx  TabNavigation.tsx  Table.tsx
frontend/src/components/ui/navigation/: MobileSidebar.tsx  Toggle.tsx  sidebar.tsx
frontend/src/lib/: chartUtils.ts  useOnWindowResize.ts
notebooks/: 01-data.ipynb  01-vanguard.ipynb  factor_regression.ipynb
sample/: security_details.pq
scripts/: __init__.py  base.py  ishares.py  main.py  vanguard.py
src/: main.py  schemas.py
src/modules/: backtest.py  factor.py  optimisation.py
src/routers/: funds.py  health.py
tests/: conftest.py
tests/api/routes/: test_backtest.py  test_funds.py  test_health.py  test_optimisation.py  test_securities.py
tests/routes/: test_funds.py  test_health.py
ui/: __init__.py  backtest.py  config.py  optimisation.py  screener.py  streamlit_app.py
