[project]
name = "portfoliobuilder"
version = "1.0.0"
description = "Investment portfolio builder application"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "polars>=1.20.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "coverage>=7.6.10",
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "tqdm>=4.67.1",
    "trio>=0.28.0",
    "streamlit>=1.41.1"
]

[tool.ruff]
line-length = 108
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F",      # Pyflakes
  "E",      # pycodestyle (Error)
  "I",      # isort
  "D",      # pydocstyle
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
  "B",      # flake8-bugbear
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "C4",     # flake8-comprehensions
]
ignore = [
  "D401",   # non-imperative-mood
  "D105",   # undocumented-magic-method
  "D107",   # undocumented-public-init,
]
pydocstyle = { convention = "numpy" }
pycodestyle = { max-doc-length = 108 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.run]
source = [
    "app",
    "tests",
]

[tool.pyright]
enableExperimentalFeatures = true
